--- a/styles.css
+++ b/styles.css
@@ -6,14 +6,27 @@ nav{
     background-color: darkgrey;
 }
 
+.nav-item{
+    background-color: lightgray;
+    margin:2px;
+    padding: 0px;
+    border-radius: 25px;
+    text-align: center;
+}
+
+.nav-item:hover{
+    background-color: lightblue;
+}
 
 
 #indexhome{
-    background-image: url(image/code.jpg);
-    clip-path: polygon(100% 6%, 0% 100%, 100% 100%);
-    height: 80vh;
+    position: relative;
+    background-image: url('image/whitebg.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 85vh;
     padding: 50px;
-    z-index: 111
+
 }
 
 .typed-out {
@@ -38,12 +51,12 @@ nav{
   }
 
 footer{
-    margin-top: 20px;
+    margin-top: 10px;
     padding: 8px;
 }
 
 footer a {
-  color: #ffffff;
+  color: lightgreen;
   text-decoration: none;
 }
 
