update front page

--- a/styles.css
+++ b/styles.css
@@ -7,15 +7,18 @@ nav{
 }
 
 .nav-item{
-    background-color: lightgray;
+/*    background-color: lightgray;*/
     margin:2px;
     padding: 0px;
     border-radius: 25px;
     text-align: center;
+     border : 1px solid white;
 }
 
 .nav-item:hover{
-    background-color: lightblue;
+/*    background-color: lightblue;*/
+    border : 1px solid lightblue;
+    font-weight: 400;
 }
 
 
@@ -24,7 +27,7 @@ nav{
     background-image: url('image/whitebg.jpg');
     background-size: cover;
     background-position: center;
-    height: 85vh;
+    height: 80vh;
     padding: 50px;
 
 }
@@ -49,6 +52,74 @@ nav{
       to { width: 100%; }
     }
   }
+
+
+/* Learn More Button Animation */
+.learn-more-btn {
+  animation: bounce 1.5s infinite;
+}
+
+/* Up and Down Animation */
+@keyframes bounce {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.card img{
+    align-self: center
+}
+
+
+.button-73 {
+  appearance: none;
+  background-color: #FFFFFF;
+  border-radius: 40em;
+  border-style: none;
+  box-shadow: #ADCFFF 0 -12px 6px inset;
+  box-sizing: border-box;
+  color: #000000;
+  cursor: pointer;
+  display: inline-block;
+  font-family: -apple-system,sans-serif;
+  font-size: 1.2rem;
+  font-weight: 700;
+  letter-spacing: -.24px;
+  margin: 0;
+  outline: none;
+  padding: 1rem 1.3rem;
+  quotes: auto;
+  text-align: center;
+  text-decoration: none;
+  transition: all .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-73:hover {
+  background-color: #FFC229;
+  box-shadow: #FF6314 0 -6px 8px inset;
+  transform: scale(1.125);
+}
+
+.button-73:active {
+  transform: scale(1.025);
+}
+
+@media (min-width: 768px) {
+  .button-73 {
+    font-size: 1.5rem;
+    padding: .75rem 2rem;
+  }
+}
+
 
 footer{
     margin-top: 10px;
