update all pages

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
-  font-family: 'Arial', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  background-color: #add8e63b;
 }
 
 nav{
@@ -32,6 +33,12 @@ nav{
 
 }
 
+@media only screen and (max-width: 600px) {
+     #indexhome{
+           height: 85vh;
+      }
+}
+
 .typed-out {
     border-right: none; 
     width: auto; 
@@ -46,6 +53,8 @@ nav{
       overflow: hidden;
       white-space: nowrap;
     }
+      
+     
   
     @keyframes typing {
       from { width: 0; }
@@ -72,8 +81,26 @@ nav{
   }
 }
 
+.card{
+    cursor: pointer;
+}
+
 .card img{
     align-self: center
+}
+
+.card p{
+    color: green;
+    font-size: 16px;
+}
+
+.card:hover{
+    transform: scale(0.98);
+    img{
+         transform: scale(1.2);
+          transition: 1s;
+    }
+    transition: 1s;
 }
 
 
@@ -118,6 +145,22 @@ nav{
     font-size: 1.5rem;
     padding: .75rem 2rem;
   }
+}
+
+
+.eduinner{
+    margin-top: 20px;
+    text-align: center;
+}
+
+.expinner{
+   margin-top: 20px;
+   text-align: center;
+}
+
+.pro-img-top{
+    height: 70px;
+    width: 100px;
 }
 
 
