reduce image size to webp

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ nav{
 
 #indexhome{
     position: relative;
-    background-image: url('image/whitebg.jpg');
+    background-image: url('image/whitebg.webp');
     background-size: cover;
     background-position: center;
     height: 80vh;
